Fix revealed contact icon spacing and black circles in print PDF
- Scope revealed-details icon margin inside sidebar-wrapper to fix specificity
- Hide fa-stack section icons in print (they render as solid black circles)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -273,6 +273,7 @@ p {
     a { color: rgba(255,255,255,0.75);
       &:hover { color: #fff; }
     }
+    .fas, .fab, .far { margin-right: 10px; }
   }
 }
 
