--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -55,4 +55,8 @@
       border-color: #888;
     }
 
+    .section-title .fa-stack {
+      display: none;
+    }
+
 }
